--- a/index.html
+++ b/index.html
@@ -5,5 +5,11 @@
     <title>Rock Paper Scissors</title>
     <script src="main.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div>
+      <button>Rock</button>
+      <button>Paper</button>
+      <button>Scissors</button>
+    </div>
+  </body>
 </html>
