--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="main.js"></script>
   </head>
   <body>
+    <div id="results"></div>
     <div>
       <button>Rock</button>
       <button>Paper</button>
