--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="results"></div>
-    <div>
+    <div id="buttons">
       <button>Rock</button>
       <button>Paper</button>
       <button>Scissors</button>
