Put an initial message in #results

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="main.js" defer></script>
   </head>
   <body>
-    <div id="results"></div>
+    <div id="results">Click any button to start a new game!</div>
     <div id="buttons">
       <button>Rock</button>
       <button>Paper</button>
