Add IDs to buttons

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <body>
     <div id="results">Click any button to start a new game!</div>
     <div id="buttons">
-      <button>Rock</button>
-      <button>Paper</button>
-      <button>Scissors</button>
+      <button id="r">Rock</button>
+      <button id="p">Paper</button>
+      <button id="s">Scissors</button>
     </div>
   </body>
 </html>
